@@ -11,6 +11,10 @@
 	 * supported formats for verses: php.1.1, 太 1:1, 馬太福音1章10節, Jobs 1:3, gen/1/3
 * Key bindings: arrow keys, jknpu, /
 * UI language all in traditional chinese
+* A new way of doing words analytics
+   * Occurences and Meanings built into the Words section.
+	 * Analytics has now only Cross-References that are calculated by occurences
+	 and numbers of meanings.
 
 ## Fixed Issues
 
